rm reference to double parentheses from  laundry list

--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -14,7 +14,7 @@ Proofreaders can choose their preferred way of working. Pdf comments, scanned co
 \laundryitem Subscripts in examples are not italicized.
 \laundryitem Footnotemarks in examples are not italicized.
 \laundryitem Parentheses are set correctly for all references.
-\laundryitem No double parentheses for citations in a parenthesized environment.
+% \laundryitem No double parentheses for citations in a parenthesized environment.
 \laundryitem Examples which are full sentences finish with punctuation in both source and translation.
 \laundryitem Examples which are not full sentences do not have a punctuation mark in source or translation.
 \laundryitem Alignment of glossed examples is correct.
