--- a/latexguidelines/latex.tex
+++ b/latexguidelines/latex.tex
@@ -46,15 +46,15 @@ A number of auxiliary files are generated on the fly, these are  \verb+.toc+ for
 \section{Using the \texttt{langsci} class}
 There are a variety of programs for making writing \latex documents easier.
 
-For Microsoft Windows, Texniccenter is the most popular one (\figref{fig:latex:texniccenter}).
+% For Microsoft Windows, Texniccenter is the most popular one (\figref{fig:latex:texniccenter}).
 For Mac, Texshop (\figref{fig:latex:texshop}) and Texstudio (\figref{fig:latex:texstudio}) are popular choices.
 For Linux, Kile is a very good \latex editor (\figref{fig:latex:kile}).
 
-\begin{figure}
-\includegraphics[height=.4\textheight]{texniccenter.png}
-\caption{Texniccenter}
-\label{fig:latex:texniccenter} 
-\end{figure}
+% \begin{figure}
+% \includegraphics[height=.4\textheight]{texniccenter.png}
+% \caption{Texniccenter}
+% \label{fig:latex:texniccenter} 
+% \end{figure}
 
 
 \begin{figure}
