--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -32,7 +32,7 @@ The back matter is structured as follows:
 
 \chapter{Style rules}
 \section{Generic rules}
-We use the \em Generic Style Rules for Linguistics \em available on \url{https://www.academia.edu/7370927/The_Generic_Style_Rules_for_Linguistics}
+We use the \em Generic Style Rules for Linguistics \em available on \url{http://www.eva.mpg.de/lingua/pdf/GenericStyleRules.pdf}
 
 \section{House Rules}\label{sec:houserules}
 The generic rules are complemented by the following house rules:
@@ -44,7 +44,7 @@ than \emph{we} as in ``As I have shown in Section~3''.
  
 
 \subsection{British vs.\ American English}
-Choose one and be consitent. For edited volumes, the choice is per chapter.  
+Choose one and be consistent. For edited volumes, the choice is per chapter.  
 
 
 \subsection{Figures}  
@@ -52,8 +52,10 @@ Please mention the creator and the licensing status of all photographs and all d
 
 Photographs should be in jpg format. For all drawings, maps, diagrams, etc., a vector format (*svg, *eps, *ps, *pdf) is preferred, *png is acceptable. For *jpg and *png, resolution should be at least 320 dpi. 
 
+See \url{http://userblogs.fu-berlin.de/langsci-press/2016/12/12/graphics-and-images/} for more information.
+
 \subsection{Tables}
-Be aware that the book will not be printed on A4/letter paper. This means that you do have less horizontal and vertical space for your tables. Tables should generally not have more than about 6 columns and about 10 rows (\tabref{tab:sentencetable}). If the data in the cells are very, short like numbers, phonemes or very short words for instance, there might be exceptions (\tabref{tab:lexicaltable}).
+Be aware that the book will not be printed on A4/letter paper. Our paper is 17cm x 24cm; A4 is 21cm x 29.4cm.  This means that you have less horizontal and vertical space for your tables. Tables should generally not have more than about 6 columns and about 10 rows (\tabref{tab:sentencetable}). If the data in the cells are very, short like numbers, phonemes or very short words for instance, there might be exceptions (\tabref{tab:lexicaltable}).
 
 
 
@@ -182,7 +184,7 @@ You should use the numbered example environment only for linguistic examples, th
 \subsection{Quotations}
 
 If long passages are quoted, they should be indented and the quote should be followed by the exact reference. Use the quotation environment \latex provides:
-\begin{quotation}
+\begin{quote}
 Precisely constructed models for linguistic structure can play an
 important role, both negative and positive, in the process of discovery 
 itself. By pushing a precise but inadequate formulation to
@@ -190,7 +192,7 @@ an unacceptable conclusion, we can often expose the exact source
 of this inadequacy and, consequently, gain a deeper understanding
 of the linguistic data.
 \citep[5]{Chomsky57a}
-\end{quotation}
+\end{quote}
 %
 Short passages should be quoted inline using quotes: \citet[5]{Chomsky57a} stated that ``[o]bscure
   and intuition-bound notions can neither lead to absurd conclusions nor provide new and
@@ -245,7 +247,9 @@ family names are contained in curly brackets.
 % These authors will then be cited as \citet{VanEynde2006a} and \citet{vonStechow84a}.
  Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
 
-Many bibliographies have inconsistent capitalization. We decapitalize all titles and booktitles. If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is.
+Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. There are two strategies to achieve this: decapitalization with protection, or literal output. If you use decapitalization with protection, all titles and booktitles will be decapitalized  If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
+
+If you opt for literal output, add the option \verb+undecapitalize+ to \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography. You cannot use your *bib file for publisher which require Title Case anymore. 
 
 The references in your \bibtex file will automatically be typeset correctly. So, provided the
 \bibtex file is correct, authors do not have to worry about this. But there are some things to
@@ -278,14 +282,15 @@ no double parentheses   & \raggedright \verb+This is not true+
 
 \end{table}
 \nocite{Bresnan82b}% something with an editor.
-
-\largerpage[-1]
+ 
 If you have an enumeration of references in the text as in \emph{As X, Y, and Z have shown}, please use
 the normal punctuation of the respective language rather than special markup like `;'.
 
-If you refer to regions in a text, for instance 111--112, please do not use 111f.\ or 111ff.\ but provide the
-full information.  
+% If you refer to regions in a text, for instance 111--112, please do not use 111f.\ or 111ff.\ but provide the
+% full information.  
 
 \section{Indexes}
-All {\lsp} books have a Subject Index and a Name Index. The Language Index is optional and should be used if the book treats several languages. Subject Index and Language Index have to be prepared by the authors completely. The Name Index is generated automatically from the citations in the text. This means that you only have to add people to the Name Index who, for whatever reason, are mentioned without connection to a work in the list of references. Examples would be politicians, ancient philosophers, novelists and the like.
+All {\lsp} books have a Subject Index and a Name Index. The Language Index is optional and should be used if the book treats several languages. Subject Index and Language Index have to be prepared by the authors. We can automatize some of this if you send us a list of languages and a list of subject terms. You might want to try \url{sketchengine.co.uk} to compile a candidate list. 
+
+The Name Index is generated automatically from the citations in the text. This means that you only have to add people to the Name Index who, for whatever reason, are mentioned without connection to a work in the list of references. Examples would be politicians, ancient philosophers, novelists and the like.
  
