--- a/latexguidelines/latex.tex
+++ b/latexguidelines/latex.tex
@@ -176,6 +176,9 @@ Linguistic examples are typeset like this
 \z
 \end{verbatim}
 
+\newcommand{\sg}{\textsc{sg}}
+\newcommand{\prs}{\textsc{prs}}
+\newcommand{\ind}{\textsc{ind}}
 This gives you
 % \todo{fix index}
 \ea\label{ex:examplelabel}
