--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -12,11 +12,11 @@
 \title{Language Science Press guidelines}  
 \subtitle{Complete set of guidelines}
 \BackTitle{Language Science Press guidelines}  
-
-\usepackage{tabularx}
+ 
 \usepackage{langsci/styles/langsci-gb4e}
 \usepackage{langsci/styles/langsci-optional}
-% \input{localcommands.tex}
+\input{localpackages.tex}
+\input{localcommands.tex}
 \begin{document}                
 \maketitle                
 \tableofcontents      
@@ -29,11 +29,11 @@
 \include{volumeeditors}
 \include{latex}
 \include{conversion}
-\include{proofreaders}
-\include{indexers}
-\include{typesetters} 
+% \include{proofreaders}
+% \include{indexers}
+% \include{typesetters} 
 \include{openness}
-\include{showcases}
+% \include{showcases}
 % \include{serieseditors}
 
 \backmatter
