--- a/latexguidelines/indexers.tex
+++ b/latexguidelines/indexers.tex
@@ -61,11 +61,11 @@ Check your index for overlong lines. Use hyphenations \verb+\mbox{...}+ or \verb
 \laundryitem Language index is there
 \laundryitem Author index is there
 \laundryitem No duplicate terms in subject index
-\laundryitem Subject index has no overlong lines
+% \laundryitem Subject index has no overlong lines
 \laundryitem No duplicate terms in language index
-\laundryitem Language index has no overlong lines
+% \laundryitem Language index has no overlong lines
 \laundryitem Author index has no titles in it
 \laundryitem Author index has no institutions in it
 \laundryitem No duplicate authors in author index
-\laundryitem Author index has no overlong lines
+% \laundryitem Author index has no overlong lines
 }
