--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -24,17 +24,16 @@
 
 
 \include{introduction}
-\include{authors}
-% \include{gsr}
+\include{authors} 
 \include{volumeeditors}
 \include{latex}
 \include{conversion}
-% \include{proofreaders}
-% \include{indexers}
-% \include{typesetters} 
+\include{proofreaders}
+\include{indexers}
+\include{typesetters} 
 \include{openness}
 % \include{showcases}
-% \include{serieseditors}
+% % \include{serieseditors}
 
 \backmatter
 \phantomsection%this allows hyperlink in ToC to work
