--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -34,7 +34,7 @@ The back matter is structured as follows:
 \section{Generic rules}
 We use the \em Generic Style Rules for Linguistics \em available on \url{http://www.eva.mpg.de/lingua/pdf/GenericStyleRules.pdf}
 
-\section{House Rules}\label{sec:houserules}
+\section{House rules}\label{sec:houserules}
 The generic rules are complemented by the following house rules:
 
 \subsection{Academic \emph{we}}
@@ -247,9 +247,9 @@ family names are contained in curly brackets.
 % These authors will then be cited as \citet{VanEynde2006a} and \citet{vonStechow84a}.
  Note that Dutch names like ``de Hoop'' are not treated differently from other surnames.
 
-Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. There are two strategies to achieve this: decapitalization with protection, or literal output. If you use decapitalization with protection, all titles and booktitles will be decapitalized  If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
+Many bibliographies have inconsistent capitalization. We do not use Title Case, i.e. all words are spelled as they would be spelled in running text (sentence case). Hence, we use \em A grammar of Tagalog \em and not \em A Grammar of Tagalog\em. There are two strategies to achieve this: decapitalization with protection, or literal output. If you use decapitalization with protection, all titles and booktitles will be decapitalized  If there is a proper name in a title, enclose it in \verb+{}+ to prevent decapitalization, e.g. \verb+title = {The Languages of {A}frica}+. Use the same procedure for German nouns and all other characters in titles which should not be decapitalized. This is not necessary for other fields, especially the author and editor fields, where capitalization is kept as is. You can use your *bib file for publisher requiring title case and for publishers requiring sentence case.
 
-If you opt for literal output, add the option \verb+undecapitalize+ to \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography. You cannot use your *bib file for publisher which require Title Case anymore. 
+If you opt for literal output, add the option \verb+undecapitalize+ to \verb+main.tex+. In this case, it is your task to lowercase all words in Title Case in your bibliography. You cannot use your *bib file for publishers which require Title Case anymore. 
 
 The references in your \bibtex file will automatically be typeset correctly. So, provided the
 \bibtex file is correct, authors do not have to worry about this. But there are some things to
