--- a/latexguidelines/volumeeditors.tex
+++ b/latexguidelines/volumeeditors.tex
@@ -1,6 +1,6 @@
 \chapter{Edited volumes}
 \section{Workflow}
-Edited volumes are submitted as a whole. It is thus the task of the volume editor to assure the integration of the various chapters. It is highly recommended that all authors use the templates provided (Word, LibreOffice, \latex). Authors should use the template for papers. The editor should download the skeleton for edited volumes and add all author's files to the folder \verb+chapters+ when they are ready. In the skeleton, the files should be included via \verb+\includepaper{chapters/smith.tex}+. Make sure that the options \verb+collection+ and \verb+collectionchapter+ are used in the preamble of your master file. If you use our skeleton for edited volumes, this is already done for you. 
+Edited volumes are submitted as a whole. It is thus the task of the volume editor to assure the integration of the various chapters. It is highly recommended that all authors use the templates provided (Word, LibreOffice, \latex). Authors should use the template for papers. The editor should download the skeleton for edited volumes and add all author's files to the folder \verb+chapters+ when they are ready. In the skeleton, the files should be included via \verb+\includepaper{chapters/kim.tex}+. Make sure that the options \verb+collection+ and \verb+collectionchapter+ are used in the preamble of your master file. If you use our skeleton for edited volumes, this is already done for you. 
 The chapter templates for edited volumes contain fields for epigrams and abstracts. While abstracts should be used, epigrams should rather be avoided as they clutter the page in combination with the abstract. 
 
 
