--- a/latexguidelines/wrap-global.tex
+++ b/latexguidelines/wrap-global.tex
@@ -15,6 +15,7 @@
  
 \usepackage{langsci/styles/langsci-gb4e}
 \usepackage{langsci/styles/langsci-optional}
+\usepackage{langsci/styles/langsci-gb4e}
 \input{localpackages.tex}
 \input{localcommands.tex}
 \begin{document}                
@@ -32,7 +33,7 @@
 \include{indexers}
 \include{typesetters} 
 \include{openness}
-% \include{showcases}
+\include{showcases}
 % % \include{serieseditors}
 
 \backmatter
