--- a/latexguidelines/showcases.tex
+++ b/latexguidelines/showcases.tex
@@ -163,12 +163,12 @@ If the series decides to use italics, it has to be ensured that structural marku
 \z 
 \is{glossing|)}\ispackagee{lsp-gb4e}
 
-In order to align the gloss with the beginning of the source word, and not with the bracket, you can use \verb+\hspaceThis\{[\+}
+In order to align the gloss with the beginning of the source word, and not with the bracket, you can use \verb+{\db}+ (dummy bracket).
 
 \begin{verbatim}
 \ea
 \gll ein {\ob}interessantes  Beispiel{\cb}\\
-     an  \hspaceThis{[}interesting        example\\
+     an  {\db}interesting        example\\
 \glt `an interesting example'
 \z 
 \end{verbatim}
@@ -176,7 +176,7 @@ In order to align the gloss with the beginning of the source word, and not with 
 \ea
 \def\exfont{\normalsize\itshape}
 \gll ein {\ob}interessantes       Beispiel{\cb}\\
-     an  \hspaceThis{[}interesting example\\
+     an  {\db}interesting example\\
 \glt `an interesting example'
 \z 
  
@@ -385,416 +385,492 @@ for children={l+=5mm,no edge}
 ]]]]
 \end{forest}%
 
-\section{DRSes: \texttt{drs}}
-
-DRSes\ispackageb{drs} can be typeset using the \texttt{drs} package by Alexis Dimitriadis\ia{Dimitriadis, Alexis}. There are various commands that let you typeset simple DRSes, ones with implications
-and DRSes with quantifiers. Some examples from the manual are given below:
-
-\bigskip
-
-\drs{x y}{Jones(x) \\ Ulysses(y) \\ x owns y}
-
+\section{Diagrams}
 \begin{verbatim}
-\drs{x y}{Jones(x) \\ Ulysses(y) \\ x owns y}
+ \begin{figure} 
+  \begin{tikzpicture}
+    \begin{axis}[
+        axis lines*=left, 
+        bar width=15pt,
+        width  = \textwidth,
+            nodes near coords,
+        enlargelimits=0.15,
+        legend style={at={(0.1,0.22)},anchor=west},
+        ylabel={\%},
+        y=0.7mm,
+        ymin=0,
+        symbolic x coords={P01,P02,P04,P05,P06,P07,P08,P10,P12,P14,P15,P16},
+        xtick=data,
+        x tick label style={},
+        colormap={bw}{gray(0cm)=(0); gray(1cm)=(1)}
+        ]
+        \addplot+[ybar,lsRichGreen!80!black,fill=lsRichGreen] plot coordinates {
+            (P01,19.47733441) 
+            (P02,04.99311069) 
+            (P04,01.22486586)
+            (P05,42.31766084) 
+            (P06,06.04866269) 
+            (P07,23.33898154) 
+            (P08,00.87072019) 
+            (P10,34.98803246) 
+            (P12,05.73730353)
+            (P14,00.92677696)
+            (P15,06.41368016)
+            (P16,02.25249973)
+        }; 
+    \end{axis} 
+  \end{tikzpicture}
+  \caption{Ratio of Fixation Time in the Caption Area in relation to Fixation Time to the Whole Screen}
+\end{figure}
+
 \end{verbatim}
 
+\begin{figure} 
+  \begin{tikzpicture}
+    \begin{axis}[
+	axis lines*=left, 
+	bar width=15pt,
+        width  = \textwidth,
+    	nodes near coords,
+	enlargelimits=0.15,
+	legend style={at={(0.1,0.22)},anchor=west},
+	ylabel={\%},
+	y=0.7mm,
+	ymin=0,
+	symbolic x coords={P01,P02,P04,P05,P06,P07,P08,P10,P12,P14,P15,P16},
+	xtick=data,
+	x tick label style={},
+	colormap={bw}{gray(0cm)=(0); gray(1cm)=(1)}
+	]
+	\addplot+[ybar,lsRichGreen!80!black,fill=lsRichGreen] plot coordinates {
+	    (P01,19.47733441) 
+	    (P02,04.99311069) 
+	    (P04,01.22486586)
+	    (P05,42.31766084) 
+	    (P06,06.04866269) 
+	    (P07,23.33898154) 
+	    (P08,00.87072019) 
+	    (P10,34.98803246) 
+	    (P12,05.73730353)
+	    (P14,00.92677696)
+	    (P15,06.41368016)
+	    (P16,02.25249973)
+	}; 
+    \end{axis} 
+  \end{tikzpicture}
+  \caption{Ratio of fixation time in the caption area in relation to fixation time to the whole screen}
+\end{figure}
 
-\drs{x}{Jones(x) \\
-      \ifdrs{y}{donkey(y)\\x owns y}
-            {z w}{z = x\\ w = y\\ z feeds w}}
-
-\begin{verbatim}
-\drs{x}{Jones(x) \\
-      \ifdrs{y}{donkey(y)\\x owns y}
-            {z w}{z = x\\ w = y\\ z feeds w}}
-\end{verbatim}
-
-\drs{X}{ the lawyers(X) \\
-        \qdrs{x}{x $\in$ X}
-             {every}{x}
-             {y}{secretary(y) \\ x hired y}}
-
-\begin{verbatim}
-\drs{X}{ the lawyers(X) \\
-        \qdrs{x}{x $\in$ X}
-             {every}{x}
-             {y}{secretary(y) \\ x hired y}}
-\end{verbatim}
-\ispackagee{drs}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{AVMs}
-
-The package for typesetting AVMs that is most widely used is the package \texttt{avm}\ispackage{avm}
-by Chris Manning\ia{Manning, Chris}. 
-
-%% This package is described in the following
-%% subsection. Section~\ref{sec-lsp-avm} describes AVM macros that were put together by Markus Duda\ia{Markus Duda}.
-
-%% \subsection{\texttt{avm}}
-
-\REF{ex:showcases:avm-avm}\ispackageb{avm} shows an example of an AVM typeset with the \texttt{avm} package:
-\ea
-\label{ex:showcases:avm-avm}
-\begin{avm}
-\[phon   & \< {\itshape porcupine\/} \>\\
-  feat-a & \@{10} \[feat-aa & type-aa\\
-                    feat-ab & \< \[ synsem|loc|cat|head & type-aba\\
-                                    feat-abc \tpv{type-abc} 
-                                  \],
-                                  \textup{NP} \>\\
-                    \tp{type-a}
-                  \]\\
- feat-b & \@{10} type-b\\ 
- \tp{some-type}
-\]
-\end{avm}
-\z
-
-
-
-\begin{verbatim}
-\begin{avm}
-\[phon   & \< {\itshape porcupine\/} \>\\
-  feat-a & \@{10} \[feat-aa & type-aa\\
-                    feat-ab & \< \[ synsem|loc|cat|head & type-aba\\
-                                    feat-abc \tpv{type-abc} 
-                                  \],
-                                  \textup{NP} \>\\
-                    \tp{type-a}
-                  \]\\
- feat-b & \@{10} type-b\\ 
- \tp{some-type}
-\]
-\end{avm}
-\end{verbatim}
-%
-The command \verb+\tp+ is defined as follows (the code is taken from Detmar
-Meurers'\ia{Meurers, Detmar} \texttt{avm+}\ispackage{avm+}):
-\begin{verbatim}
-% command to fontify the type values of an avm 
-\newcommand{\tpv}[1]{{\avmjvalfont #1}}
-
-% command to fontify the type of an avm and avmspan it
-\newcommand{\tp}[1]{\avmspan{\tpv{#1}}}
-\end{verbatim}
-
-A more complex example is given in \REF{ex:showcases:avm-complicated}:
-\ea\label{ex:showcases:avm-complicated} 
-  \begin{avm}
-    {\itshape word\/} $\rightarrow$
-    \[ morphs & $\@{e_1}\bigcirc\cdots\bigcirc\@{e_n}$\\
-       morsyn & \@0 $(\@{m_1}\uplus\cdots\uplus\@{m_n})$\\
-       rules  & \< \[ morphs & \@{e_1}\\
-                      mud & \@{m_1}\\ 
-                      morsyn & \@0\], \ldots ,
-                    \[morphs & \@{e_n}\\
-                      mud    & \@{m_n}\\ 
-                      morsyn & \@0\] \>
-    \]
-  \end{avm}
-\z
-
-
-The code is given below:
-\begin{verbatim}
-  \begin{avm}
-    {\itshape word\/} $\rightarrow$
-    \[ morphs & $\@{e_1}\bigcirc\cdots\bigcirc\@{e_n}$\\
-       morsyn & \@0 $(\@{m_1}\uplus\cdots\uplus\@{m_n})$\\
-       rules  & \< \[ morphs & \@{e_1}\\
-                      mud & \@{m_1}\\ 
-                      morsyn & \@0\], \ldots,
-                    \[morphs & \@{e_n}\\
-                      mud    & \@{m_n}\\ 
-                      morsyn & \@0\] \>
-    \]
-  \end{avm}
-\end{verbatim}
-With the \texttt{avm} package it is possible to use brackets as they are used in AVMs.
-
-The package has a good documentation and we will not repeat all the details here.
-\ispackagee{avm}
-
-%% \subsection{\texttt{lsp-avm}}
-%% \label{sec-lsp-avm}
-
-%% An alternative way to typeset AVMs is provided in the \lsp style file \texttt{lsp-avm} that contains
-%% code by Markus Duda\ia{Markus Duda} with some adaptions by Stefan Müller\ia{Stefan
-%%   M{\"u}ller}. The AVM in (\ref{ex-avm-avm}) is typeset as follows:
-
-%% \ea
-%% \ms[some-type]{
-%%   phon   & \phonliste{ porcupine } \\
-%%   feat-a & \ibox{10} \ms[type-a]{ feat-aa & type-aa\\
-%%                                   feat-ab & \liste{ \onems{ synsem|loc|cat|head \type{type-aba}\\
-%%                                                             feat-abc \type{type-abc} },
-%%                                   NP }\\ }\\
-%%  feat-b & \ibox{10} type-b\\ 
-%% }
-%% \z
-
-%% %\ea
-%% \begin{verbatim}
-%% {\itshape word\/} $\rightarrow$
-%%     \ms{ morphs & $\ibox{e_1}\bigcirc\cdots\bigcirc\ibox{e_n}$\\
-%%          morsyn & \ibox{0} $(\ibox{m_1}\uplus\cdots\uplus\ibox{m_n})$\\
-%%          rules  & \liste{ \ms{ morphs & \ibox{e_1}\\
-%%                                mud & \ibox{m_1}\\ 
-%%                                morsyn & \ibox{0} }, \ldots ,
-%%                           \ms{ morphs & \ibox{e_n}\\
-%%                                mud    & \ibox{m_n}\\ 
-%%                                morsyn & \ibox{0} } }
-%%       }
-%% \end{verbatim}
-
-
-\section{OT tableaux}
-
-
-This\is{Optimality Theory|(}\is{tabular} section just provides a simple example of how Optimality Tableaux can be typeset.
-
-
-
-\begin{verbatim}
-\begin{tabular}[t]{r|c|c|c|}
-\cline{2-4}
-      & /qi/  & qi    & qi         \\
-\LCC 
-      &       &       & \lightgray \\ \cline{2-4}
-\hand & [qi]  &       & *          \\ \cline{2-4}
-      & [*qi] & *!    &            \\ \cline{2-4}
-\ECC
-\end{tabular}
-\end{verbatim}
-
-\begin{tabular}[t]{r|c|c|c|}
-\cline{2-4}
-      & /qi/  & qi    & qi         \\
-\LCC 
-      &       &       & \lightgray \\ \cline{2-4}
-\hand & [qi]  &       & *          \\ \cline{2-4}
-      & [*qi] & *!    &            \\ \cline{2-4}
-\ECC
-\end{tabular}
-
-% \section{Conversation transcripts} 
-% To be completed.
-
-% \section{Font issues and right to left scripts}
+% \section{DRSes: \texttt{drs}}
 % 
-% Since\is{font|(} we are using \xelatex, all fonts that are installed in the cannonical font directories can be
-% used. We are using the font Linux Libertine, which is unicode-based and contains a lot of
-% the characters linguists want to use.
+% DRSes\ispackageb{drs} can be typeset using the \texttt{drs} package by Alexis Dimitriadis\ia{Dimitriadis, Alexis}. There are various commands that let you typeset simple DRSes, ones with implications
+% and DRSes with quantifiers. Some examples from the manual are given below:
 % 
-% \subsection{Chinese}
-% \label{sec-Chinese}
+% \bigskip
 % 
-% You can enter Chinese\il{Chinese}\is{Chinese Characters} characters directly and mix them with ASCII text without any further markup
-% provided you load the \texttt{xeCJK}\ispackage{xeCJK} package. We already saw an example in (\ref{ex-chinese}) on
-% page~\pageref{ex-chinese}. In order to type Chinese text, one has to load the \texttt{xeCJK} package
-% with the option \indentfirst set to \false and select an appropriate font:
+% \drs{x y}{Jones(x) \\ Ulysses(y) \\ x owns y}
+% 
 % \begin{verbatim}
-% \usepackage[indentfirst=false]{xeCJK}
-% \setCJKmainfont{SimSun}
+% \drs{x y}{Jones(x) \\ Ulysses(y) \\ x owns y}
 % \end{verbatim}
 % 
 % 
-% \subsection{Arabic script}
+% \drs{x}{Jones(x) \\
+%       \ifdrs{y}{donkey(y)\\x owns y}
+%             {z w}{z = x\\ w = y\\ z feeds w}}
 % 
-% Arabic script\is{Arabic Script}\il{Persian} is the most challenging script for typesetting since it is written from right to left
-% and contains ligatures. If you load the \texttt{bidi} package, you can mix right to left and left to
-% right text.\footnote{
-%   Please have a look at the source code. The verbatim environment has difficulties to display Arabic
-%   text and hence the call to \texttt{$\backslash$PRL} comes out scrambled.
-% }
-% 
-% \ea
-% % \PRL{او مرد را دوست نخواهد داشت.}\\
-%  \gll U      mard rā        dust   naxāhad        dāšt.\\
-%       He/she man  {\scshape dom} friend {\scshape neg}.want have\\
-% \glt `He/she will not love the man.'
-% \z
-% 
-% %\begin{rtlverbatim}
-% %\usepackage{fontspec}
 % \begin{verbatim}
-% \newfontfamily\Parsifont[Script=Arabic]{XB Niloofar}
-% \usepackage{bidi}
-% \newcommand{\PRL}[1]{\RL{\Parsifont #1}}
-% 
-% \ea
-% \PRL{او مرد را دوست نخواهد داشت.}\\
-% \gll U      mard rā       dust   naxāhad        dāšt.\\
-%      He/she man {\scshape dom} friend {\scshape neg}.want have\\
-% \glt `He/she will not love the man.'
-% \z
+% \drs{x}{Jones(x) \\
+%       \ifdrs{y}{donkey(y)\\x owns y}
+%             {z w}{z = x\\ w = y\\ z feeds w}}
 % \end{verbatim}
-% %\end{rtlverbatim}
 % 
-% \subsection{Hebrew}
+% \drs{X}{ the lawyers(X) \\
+%         \qdrs{x}{x $\in$ X}
+%              {every}{x}
+%              {y}{secretary(y) \\ x hired y}}
 % 
-% Hebrew\il{Hebrew|(} is also written from right to left. The characters are part of Linux Libertine, so no extra
-% font has to be loaded to set examples like \REF{ex:latex:hebrew}:
-% \ea\label{ex:latex:hebrew}
-% % \RL{האישה קוראת ספר.}\\
-% \gll   ha-'iša          qore't                            sefer.\\
-%        {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
-% \glt `The woman is reading a book.'
-% \z
-% % \begin{fitverb}
+% \begin{verbatim}
+% \drs{X}{ the lawyers(X) \\
+%         \qdrs{x}{x $\in$ X}
+%              {every}{x}
+%              {y}{secretary(y) \\ x hired y}}
+% \end{verbatim}
+% \ispackagee{drs}
+% 
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% 
+% \section{AVMs}
+% 
+% The package for typesetting AVMs that is most widely used is the package \texttt{avm}\ispackage{avm}
+% by Chris Manning\ia{Manning, Chris}. 
+% 
+% %% This package is described in the following
+% %% subsection. Section~\ref{sec-lsp-avm} describes AVM macros that were put together by Markus Duda\ia{Markus Duda}.
+% 
+% %% \subsection{\texttt{avm}}
+% 
+% \REF{ex:showcases:avm-avm}\ispackageb{avm} shows an example of an AVM typeset with the \texttt{avm} package:
 % \ea
-% % \RL{האישה קוראת ספר.}\\
-% \gll   ha-'iša          qore't                            sefer.\\
-%        {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
-% \glt `The woman is reading a book.'
+% \label{ex:showcases:avm-avm}
+% \begin{avm}
+% \[phon   & \< {\itshape porcupine\/} \>\\
+%   feat-a & \@{10} \[feat-aa & type-aa\\
+%                     feat-ab & \< \[ synsem|loc|cat|head & type-aba\\
+%                                     feat-abc \tpv{type-abc} 
+%                                   \],
+%                                   \textup{NP} \>\\
+%                     \tp{type-a}
+%                   \]\\
+%  feat-b & \@{10} type-b\\ 
+%  \tp{some-type}
+% \]
+% \end{avm}
 % \z
-% % \end{fitverb}
-% \il{Hebrew|)}
 % 
-% \subsection{IPA symbols}
 % 
-% The\is{IPA symbols|(} IPA symbols are part of the Linux Libertine font and hence can be entered into the document
-% directly. The IPA unicode symbols can be created online at
-% \url{http://ipa.typeit.org/full/}. \REF{ex:showcases:IPA} shows some examples:
-% \ea\label{ex:showcases:IPA}
-% ɓ ɐ ʁ ɾ ɻ ʃ ʂ θ~  t͡ʃ~  t͡s  ʈ ʊ ʊ̈ ʉ ʌ ʋ ʍ ɯ ɰ χ ʎ ɣ ʏ ɤ ʒ ʐ ʑ ʔ ʕ ʢ ʡ ɑ̃ ɔ ˧ ˨ ˩ ˩˥ ˥˩ ˦˥
+% 
+% \begin{verbatim}
+% \begin{avm}
+% \[phon   & \< {\itshape porcupine\/} \>\\
+%   feat-a & \@{10} \[feat-aa & type-aa\\
+%                     feat-ab & \< \[ synsem|loc|cat|head & type-aba\\
+%                                     feat-abc \tpv{type-abc} 
+%                                   \],
+%                                   \textup{NP} \>\\
+%                     \tp{type-a}
+%                   \]\\
+%  feat-b & \@{10} type-b\\ 
+%  \tp{some-type}
+% \]
+% \end{avm}
+% \end{verbatim}
+% %
+% The command \verb+\tp+ is defined as follows (the code is taken from Detmar
+% Meurers'\ia{Meurers, Detmar} \texttt{avm+}\ispackage{avm+}):
+% \begin{verbatim}
+% % command to fontify the type values of an avm 
+% \newcommand{\tpv}[1]{{\avmjvalfont #1}}
+% 
+% % command to fontify the type of an avm and avmspan it
+% \newcommand{\tp}[1]{\avmspan{\tpv{#1}}}
+% \end{verbatim}
+% 
+% A more complex example is given in \REF{ex:showcases:avm-complicated}:
+% \ea\label{ex:showcases:avm-complicated} 
+%   \begin{avm}
+%     {\itshape word\/} $\rightarrow$
+%     \[ morphs & $\@{e_1}\bigcirc\cdots\bigcirc\@{e_n}$\\
+%        morsyn & \@0 $(\@{m_1}\uplus\cdots\uplus\@{m_n})$\\
+%        rules  & \< \[ morphs & \@{e_1}\\
+%                       mud & \@{m_1}\\ 
+%                       morsyn & \@0\], \ldots ,
+%                     \[morphs & \@{e_n}\\
+%                       mud    & \@{m_n}\\ 
+%                       morsyn & \@0\] \>
+%     \]
+%   \end{avm}
 % \z
-% % ⱱ does not work  
-% If you find symbols that are not covered by the font, please use the \texttt{tipa} package.
-% \is{font|)}\is{IPA symbols|)}
-%  
-% % \section{Bells and whistles}
-% % 
-% % \section{\texttt{varioref}}
-% % 
-% % \texttt{varioref}\ispackageb{varioref} is loaded by the \lsp class file. You can use \vref \iscommand{vref} to refer to floating
-% % objects like figures and tables. \latex automatically determines whether the floating object is on
-% % the same page or further away. If the float is on the next page and the next page is to the right of
-% % the current page, \latex will insert an appropriate text like \emph{on the facing page}. If we are
-% % on a right page, \latex will insert something like \emph{on the next page} or \emph{on the facing page}. If the float is further
-% % away, a page number will be provided.
-% % \ispackagee{varioref}
-% % 
-% % %Please use \verb+\vref+ for the first reference to a float only.
-% % 
-% % 
-% % \section{\texttt{german} for hyphenation}
-% % 
-% % If\is{hyphenation|(}\ispackageb{german} you write things like \head-driven or very long paths like
-% % {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}, \LaTeX{} does not do hyphenation
-% % (in the part following the dash).
-% % 
-% % german.sty+ provides additional markup that allows for proper hyphenation:
-% % \begin{verbatim}
-% % head"=driven
-% % 
-% % {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}
-% % \end{verbatim}
-% % With this markup even long paths like {\scshape snysem$|$loc$|$cat$|$""head$|$""mod$|$""loc$|$""cat$|$""head}
-% % are typeset properly. Alternatively you my write
-% % \begin{verbatim}
-% % {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod}
-% % \end{verbatim}
-% % which introduces a dash at the place of the linebreak:
-% % {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod$|$\-loc$|$\-cat$|$\-head}.
-% % 
-% % If you use german.sty for a book whose primary language is not German, do not forget to
-% % specify the language you are using. For example, if your book is in US English you have to specify
-% % the following:
-% % \begin{verbatim}
-% % \selectlanguage{USenglish}
-% % \end{verbatim}
-% % Otherwise the section name for references comes out in German.
-% % \is{hyphenation|)}\ispackagee{german}
-% % 
-% % \section{Resizing large objects}
-% % 
-% % Trees and AVMs often are too big to fit onto one page. The \texttt{langsci} comes with commands for
-% % shrinking large objects. You may pass your complex object as an argument to \texttt{\oneline} and
-% % this will scale the object to \linewidth (the remaining space on the current line). There is
-% % a more clever version of this command: \centerfit. This command checks whether there is
-% % enough space for an object and if this is the case it centers it in the line. If the object is
-% % larger than the \linewidth, it is resized to fit the line. This is very handy for typesetting
-% % figures. You may copy and paste figures to other documents with a different text width without any
-% % adaptations.
-% % 
-% % 
-% % %% \begin{figure}[htb]
-% % %% \centerfit{%
-% % %% \begin{tikzpicture}
-% % %% \tikzset{level 1+/.style={level distance=3\baselineskip}}
-% % %% \tikzset{level 2+/.style={level distance=5\baselineskip}}
-% % %% \tikzset{level 3+/.style={level distance=6\baselineskip}}
-% % %% \tikzset{level 4/.style={level distance=7\baselineskip}}
-% % %% \tikzset{level 5+/.style={level distance=5\baselineskip}}
-% % %% \tikzset{frontier/.style={distance from root=26\baselineskip}}
-% % %% %% \Tree[.{\ms[np-passive-cx]{ vform & passive \\
-% % %% %%                             subj & \sliste{ NP\ind{1} }\\[2mm]
-% % %% %%                             comps & \sliste{ (PP[\type{by}]\ind{2}) }\\
-% % %% %%                           } }
-% % %% %%         \ms{ vform & psp \\
-% % %% %%              subj & \sliste{ NP\ind{2} }\\[2mm]
-% % %% %%              comps & \sliste{ NP\ind{1} } 
-% % %% %%            } ]
-% % %% \Tree[.S
-% % %%        [.{\ibox{1} NP\ind{2}} \edge[roof]; {the boy} ]
-% % %%        [.VP\feattab{
-% % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
-% % %%                  \comps  \sliste{  }}
-% % %%          [.V\feattab{
-% % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
-% % %%                  \comps  \sliste{ \ibox{3} }} was ]
-% % %%          [.{\ibox{3} VP\feattab{
-% % %%                  \vform \type{passive},\\
-% % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
-% % %%                  \comps  \sliste{ }}} \edge node[auto=left]{Passive Construction};
-% % %%            [.V\feattab{
-% % %%                  \vform \type{psp},\\
-% % %%                  \subj  \sliste{ NP },\\
-% % %%                  \comps  \sliste{ NP\ind{2} }} 
-% % %%              [.V\feattab{
-% % %%                  \vform \type{psp},\\
-% % %%                  \subj  \sliste{ NP },\\
-% % %%                  \comps  \sliste{ NP\ind{2}, \ibox{4} }} given ] \edge node[auto=left]{Schema for Passive Participles};
-% % %%              [.{\ibox{4} NP} \edge[roof]; { the ball } ] ] ] ] ] 
-% % %% \end{tikzpicture}
-% % %% }
-% % %% \caption{\label{fig-the-boy-was-given-the-ball-tseng}Analysis of \emph{The boy was given the ball} according to \citet{Tseng2007a}}
-% % %% \end{figure}
 % 
-
-\section{Intonation}
-We have created a small command for intonation pattern shown over examples. Use \verb+\intline{height}{text}+ to add a line of the specified height directly over the text. Use \verb+\dline{height}{slope}{length}+ to add a descending line. Finding the right slope and length requires some testing. 
-
-\newpage 
-\begin{verbatim} 
-\ea  
-\gll
-\intline{18}{iˈ}%
-\intline{20}{we}%
-\intline{16}{ra} %
-\intline{14}{mu}%
--\intline{14}{ˈep} %
-\intline{10}{maa} % 
-\intline{12}{ˈuu}%
-\dline{12}{3}{24}p-i-nen \\
-coconut  scrape-\textsc{ss.seq} food  cook-\textsc{Np-fu}.1s      \\
-\glt`I will scrape a coconut and cook food.'
-\z 
-\end{verbatim}
-
-\ea  
-\gll
-\intline{18}{iˈ}%
-\intline{20}{we}%
-\intline{16}{ra} %
-\intline{14}{mu}%
--\intline{14}{ˈep} %
-\intline{10}{maa} % 
-\intline{12}{ˈuu}%
-\dline{12}{3}{24}p-i-nen \\
-coconut  scrape-\textsc{ss.seq} food  cook-\textsc{Np-fu}.1s      \\
-\glt`I will scrape a coconut and cook food.'
-\z 
+% 
+% The code is given below:
+% \begin{verbatim}
+%   \begin{avm}
+%     {\itshape word\/} $\rightarrow$
+%     \[ morphs & $\@{e_1}\bigcirc\cdots\bigcirc\@{e_n}$\\
+%        morsyn & \@0 $(\@{m_1}\uplus\cdots\uplus\@{m_n})$\\
+%        rules  & \< \[ morphs & \@{e_1}\\
+%                       mud & \@{m_1}\\ 
+%                       morsyn & \@0\], \ldots,
+%                     \[morphs & \@{e_n}\\
+%                       mud    & \@{m_n}\\ 
+%                       morsyn & \@0\] \>
+%     \]
+%   \end{avm}
+% \end{verbatim}
+% With the \texttt{avm} package it is possible to use brackets as they are used in AVMs.
+% 
+% The package has a good documentation and we will not repeat all the details here.
+% \ispackagee{avm}
+% 
+% %% \subsection{\texttt{lsp-avm}}
+% %% \label{sec-lsp-avm}
+% 
+% %% An alternative way to typeset AVMs is provided in the \lsp style file \texttt{lsp-avm} that contains
+% %% code by Markus Duda\ia{Markus Duda} with some adaptions by Stefan Müller\ia{Stefan
+% %%   M{\"u}ller}. The AVM in (\ref{ex-avm-avm}) is typeset as follows:
+% 
+% %% \ea
+% %% \ms[some-type]{
+% %%   phon   & \phonliste{ porcupine } \\
+% %%   feat-a & \ibox{10} \ms[type-a]{ feat-aa & type-aa\\
+% %%                                   feat-ab & \liste{ \onems{ synsem|loc|cat|head \type{type-aba}\\
+% %%                                                             feat-abc \type{type-abc} },
+% %%                                   NP }\\ }\\
+% %%  feat-b & \ibox{10} type-b\\ 
+% %% }
+% %% \z
+% 
+% %% %\ea
+% %% \begin{verbatim}
+% %% {\itshape word\/} $\rightarrow$
+% %%     \ms{ morphs & $\ibox{e_1}\bigcirc\cdots\bigcirc\ibox{e_n}$\\
+% %%          morsyn & \ibox{0} $(\ibox{m_1}\uplus\cdots\uplus\ibox{m_n})$\\
+% %%          rules  & \liste{ \ms{ morphs & \ibox{e_1}\\
+% %%                                mud & \ibox{m_1}\\ 
+% %%                                morsyn & \ibox{0} }, \ldots ,
+% %%                           \ms{ morphs & \ibox{e_n}\\
+% %%                                mud    & \ibox{m_n}\\ 
+% %%                                morsyn & \ibox{0} } }
+% %%       }
+% %% \end{verbatim}
+% 
+% 
+% % \section{OT tableaux}
+% % 
+% % 
+% % This\is{Optimality Theory|(}\is{tabular} section just provides a simple example of how Optimality Tableaux can be typeset.
+% % 
+% % 
+% % 
+% % \begin{verbatim}
+% % \begin{tabular}[t]{r|c|c|c|}
+% % \cline{2-4}
+% %       & /qi/  & qi    & qi         \\
+% % \LCC 
+% %       &       &       & \lightgray \\ \cline{2-4}
+% % \hand & [qi]  &       & *          \\ \cline{2-4}
+% %       & [*qi] & *!    &            \\ \cline{2-4}
+% % \ECC
+% % \end{tabular}
+% % \end{verbatim}
+% % 
+% % \begin{tabular}[t]{r|c|c|c|}
+% % \cline{2-4}
+% %       & /qi/  & qi    & qi         \\
+% % \LCC 
+% %       &       &       & \lightgray \\ \cline{2-4}
+% % \hand & [qi]  &       & *          \\ \cline{2-4}
+% %       & [*qi] & *!    &            \\ \cline{2-4}
+% % \ECC
+% % \end{tabular}
+% % 
+% % % \section{Conversation transcripts} 
+% % % To be completed.
+% % 
+% % % \section{Font issues and right to left scripts}
+% % % 
+% % % Since\is{font|(} we are using \xelatex, all fonts that are installed in the cannonical font directories can be
+% % % used. We are using the font Linux Libertine, which is unicode-based and contains a lot of
+% % % the characters linguists want to use.
+% % % 
+% % % \subsection{Chinese}
+% % % \label{sec-Chinese}
+% % % 
+% % % You can enter Chinese\il{Chinese}\is{Chinese Characters} characters directly and mix them with ASCII text without any further markup
+% % % provided you load the \texttt{xeCJK}\ispackage{xeCJK} package. We already saw an example in (\ref{ex-chinese}) on
+% % % page~\pageref{ex-chinese}. In order to type Chinese text, one has to load the \texttt{xeCJK} package
+% % % with the option \indentfirst set to \false and select an appropriate font:
+% % % \begin{verbatim}
+% % % \usepackage[indentfirst=false]{xeCJK}
+% % % \setCJKmainfont{SimSun}
+% % % \end{verbatim}
+% % % 
+% % % 
+% % % \subsection{Arabic script}
+% % % 
+% % % Arabic script\is{Arabic Script}\il{Persian} is the most challenging script for typesetting since it is written from right to left
+% % % and contains ligatures. If you load the \texttt{bidi} package, you can mix right to left and left to
+% % % right text.\footnote{
+% % %   Please have a look at the source code. The verbatim environment has difficulties to display Arabic
+% % %   text and hence the call to \texttt{$\backslash$PRL} comes out scrambled.
+% % % }
+% % % 
+% % % \ea
+% % % % \PRL{او مرد را دوست نخواهد داشت.}\\
+% % %  \gll U      mard rā        dust   naxāhad        dāšt.\\
+% % %       He/she man  {\scshape dom} friend {\scshape neg}.want have\\
+% % % \glt `He/she will not love the man.'
+% % % \z
+% % % 
+% % % %\begin{rtlverbatim}
+% % % %\usepackage{fontspec}
+% % % \begin{verbatim}
+% % % \newfontfamily\Parsifont[Script=Arabic]{XB Niloofar}
+% % % \usepackage{bidi}
+% % % \newcommand{\PRL}[1]{\RL{\Parsifont #1}}
+% % % 
+% % % \ea
+% % % \PRL{او مرد را دوست نخواهد داشت.}\\
+% % % \gll U      mard rā       dust   naxāhad        dāšt.\\
+% % %      He/she man {\scshape dom} friend {\scshape neg}.want have\\
+% % % \glt `He/she will not love the man.'
+% % % \z
+% % % \end{verbatim}
+% % % %\end{rtlverbatim}
+% % % 
+% % % \subsection{Hebrew}
+% % % 
+% % % Hebrew\il{Hebrew|(} is also written from right to left. The characters are part of Linux Libertine, so no extra
+% % % font has to be loaded to set examples like \REF{ex:latex:hebrew}:
+% % % \ea\label{ex:latex:hebrew}
+% % % % \RL{האישה קוראת ספר.}\\
+% % % \gll   ha-'iša          qore't                            sefer.\\
+% % %        {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
+% % % \glt `The woman is reading a book.'
+% % % \z
+% % % % \begin{fitverb}
+% % % \ea
+% % % % \RL{האישה קוראת ספר.}\\
+% % % \gll   ha-'iša          qore't                            sefer.\\
+% % %        {\scshape def}-woman  read.{\scshape pres}.{\scshape f}.{\scshape sg}  book\\
+% % % \glt `The woman is reading a book.'
+% % % \z
+% % % % \end{fitverb}
+% % % \il{Hebrew|)}
+% % % 
+% % % \subsection{IPA symbols}
+% % % 
+% % % The\is{IPA symbols|(} IPA symbols are part of the Linux Libertine font and hence can be entered into the document
+% % % directly. The IPA unicode symbols can be created online at
+% % % \url{http://ipa.typeit.org/full/}. \REF{ex:showcases:IPA} shows some examples:
+% % % \ea\label{ex:showcases:IPA}
+% % % ɓ ɐ ʁ ɾ ɻ ʃ ʂ θ~  t͡ʃ~  t͡s  ʈ ʊ ʊ̈ ʉ ʌ ʋ ʍ ɯ ɰ χ ʎ ɣ ʏ ɤ ʒ ʐ ʑ ʔ ʕ ʢ ʡ ɑ̃ ɔ ˧ ˨ ˩ ˩˥ ˥˩ ˦˥
+% % % \z
+% % % % ⱱ does not work  
+% % % If you find symbols that are not covered by the font, please use the \texttt{tipa} package.
+% % % \is{font|)}\is{IPA symbols|)}
+% % %  
+% % % % \section{Bells and whistles}
+% % % % 
+% % % % \section{\texttt{varioref}}
+% % % % 
+% % % % \texttt{varioref}\ispackageb{varioref} is loaded by the \lsp class file. You can use \vref \iscommand{vref} to refer to floating
+% % % % objects like figures and tables. \latex automatically determines whether the floating object is on
+% % % % the same page or further away. If the float is on the next page and the next page is to the right of
+% % % % the current page, \latex will insert an appropriate text like \emph{on the facing page}. If we are
+% % % % on a right page, \latex will insert something like \emph{on the next page} or \emph{on the facing page}. If the float is further
+% % % % away, a page number will be provided.
+% % % % \ispackagee{varioref}
+% % % % 
+% % % % %Please use \verb+\vref+ for the first reference to a float only.
+% % % % 
+% % % % 
+% % % % \section{\texttt{german} for hyphenation}
+% % % % 
+% % % % If\is{hyphenation|(}\ispackageb{german} you write things like \head-driven or very long paths like
+% % % % {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}, \LaTeX{} does not do hyphenation
+% % % % (in the part following the dash).
+% % % % 
+% % % % german.sty+ provides additional markup that allows for proper hyphenation:
+% % % % \begin{verbatim}
+% % % % head"=driven
+% % % % 
+% % % % {\scshape snysem$|$""loc$|$""cat$|$""head$|$""mod$|$""loc}
+% % % % \end{verbatim}
+% % % % With this markup even long paths like {\scshape snysem$|$loc$|$cat$|$""head$|$""mod$|$""loc$|$""cat$|$""head}
+% % % % are typeset properly. Alternatively you my write
+% % % % \begin{verbatim}
+% % % % {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod}
+% % % % \end{verbatim}
+% % % % which introduces a dash at the place of the linebreak:
+% % % % {\scshape snysem$|$\-loc$|$\-cat$|$\-head$|$\-mod$|$\-loc$|$\-cat$|$\-head}.
+% % % % 
+% % % % If you use german.sty for a book whose primary language is not German, do not forget to
+% % % % specify the language you are using. For example, if your book is in US English you have to specify
+% % % % the following:
+% % % % \begin{verbatim}
+% % % % \selectlanguage{USenglish}
+% % % % \end{verbatim}
+% % % % Otherwise the section name for references comes out in German.
+% % % % \is{hyphenation|)}\ispackagee{german}
+% % % % 
+% % % % \section{Resizing large objects}
+% % % % 
+% % % % Trees and AVMs often are too big to fit onto one page. The \texttt{langsci} comes with commands for
+% % % % shrinking large objects. You may pass your complex object as an argument to \texttt{\oneline} and
+% % % % this will scale the object to \linewidth (the remaining space on the current line). There is
+% % % % a more clever version of this command: \centerfit. This command checks whether there is
+% % % % enough space for an object and if this is the case it centers it in the line. If the object is
+% % % % larger than the \linewidth, it is resized to fit the line. This is very handy for typesetting
+% % % % figures. You may copy and paste figures to other documents with a different text width without any
+% % % % adaptations.
+% % % % 
+% % % % 
+% % % % %% \begin{figure}[htb]
+% % % % %% \centerfit{%
+% % % % %% \begin{tikzpicture}
+% % % % %% \tikzset{level 1+/.style={level distance=3\baselineskip}}
+% % % % %% \tikzset{level 2+/.style={level distance=5\baselineskip}}
+% % % % %% \tikzset{level 3+/.style={level distance=6\baselineskip}}
+% % % % %% \tikzset{level 4/.style={level distance=7\baselineskip}}
+% % % % %% \tikzset{level 5+/.style={level distance=5\baselineskip}}
+% % % % %% \tikzset{frontier/.style={distance from root=26\baselineskip}}
+% % % % %% %% \Tree[.{\ms[np-passive-cx]{ vform & passive \\
+% % % % %% %%                             subj & \sliste{ NP\ind{1} }\\[2mm]
+% % % % %% %%                             comps & \sliste{ (PP[\type{by}]\ind{2}) }\\
+% % % % %% %%                           } }
+% % % % %% %%         \ms{ vform & psp \\
+% % % % %% %%              subj & \sliste{ NP\ind{2} }\\[2mm]
+% % % % %% %%              comps & \sliste{ NP\ind{1} } 
+% % % % %% %%            } ]
+% % % % %% \Tree[.S
+% % % % %%        [.{\ibox{1} NP\ind{2}} \edge[roof]; {the boy} ]
+% % % % %%        [.VP\feattab{
+% % % % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
+% % % % %%                  \comps  \sliste{  }}
+% % % % %%          [.V\feattab{
+% % % % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
+% % % % %%                  \comps  \sliste{ \ibox{3} }} was ]
+% % % % %%          [.{\ibox{3} VP\feattab{
+% % % % %%                  \vform \type{passive},\\
+% % % % %%                  \subj  \sliste{ \ibox{1} NP\ind{2} },\\
+% % % % %%                  \comps  \sliste{ }}} \edge node[auto=left]{Passive Construction};
+% % % % %%            [.V\feattab{
+% % % % %%                  \vform \type{psp},\\
+% % % % %%                  \subj  \sliste{ NP },\\
+% % % % %%                  \comps  \sliste{ NP\ind{2} }} 
+% % % % %%              [.V\feattab{
+% % % % %%                  \vform \type{psp},\\
+% % % % %%                  \subj  \sliste{ NP },\\
+% % % % %%                  \comps  \sliste{ NP\ind{2}, \ibox{4} }} given ] \edge node[auto=left]{Schema for Passive Participles};
+% % % % %%              [.{\ibox{4} NP} \edge[roof]; { the ball } ] ] ] ] ] 
+% % % % %% \end{tikzpicture}
+% % % % %% }
+% % % % %% \caption{\label{fig-the-boy-was-given-the-ball-tseng}Analysis of \emph{The boy was given the ball} according to \citet{Tseng2007a}}
+% % % % %% \end{figure}
+% % % 
+% % 
+% % \section{Intonation}
+% We have created a small command for intonation pattern shown over examples. Use \verb+\intline{height}{text}+ to add a line of the specified height directly over the text. Use \verb+\dline{height}{slope}{length}+ to add a descending line. Finding the right slope and length requires some testing. 
+% 
+% \newpage 
+% \begin{verbatim} 
+% \ea  
+% \gll
+% \intline{18}{iˈ}%
+% \intline{20}{we}%
+% \intline{16}{ra} %
+% \intline{14}{mu}%
+% -\intline{14}{ˈep} %
+% \intline{10}{maa} % 
+% \intline{12}{ˈuu}%
+% \dline{12}{3}{24}p-i-nen \\
+% coconut  scrape-\textsc{ss.seq} food  cook-\textsc{Np-fu}.1s      \\
+% \glt`I will scrape a coconut and cook food.'
+% \z 
+% \end{verbatim}
+% 
+% \ea  
+% \gll
+% \intline{18}{iˈ}%
+% \intline{20}{we}%
+% \intline{16}{ra} %
+% \intline{14}{mu}%
+% -\intline{14}{ˈep} %
+% \intline{10}{maa} % 
+% \intline{12}{ˈuu}%
+% \dline{12}{3}{24}p-i-nen \\
+% coconut  scrape-\textsc{ss.seq} food  cook-\textsc{Np-fu}.1s      \\
+% \glt`I will scrape a coconut and cook food.'
+% \z 
