--- a/latexguidelines/authors.tex
+++ b/latexguidelines/authors.tex
@@ -219,8 +219,8 @@ final documents much more useful.
  
 Depending on the series and the language the book is published in authors may  use the § sign or the word \emph{Section}. 
 
-\subsection{Epigrams}
-You can use epigrams for your chapters. When using epigrams in edited volumes, make sure that the combination of epigram and abstract leaves room for the actual chapter to start on the same page.
+% \subsection{Epigrams}
+% You can use epigrams for your chapters. When using epigrams in edited volumes, make sure that the combination of epigram and abstract leaves room for the actual chapter to start on the same page.
 
 \subsection{Aspiration, labialization, velarization, etc.}
 For phonetic symbols of aspiration and secondary articulation, do not use a superscript normal letter; use the special Unicode characters ʰ ʷ ʲ ˠ ˤ etc. You can define a special command like \verb+{\lab}+ for ʷ for easier input. 
